# pysplainer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
pysplainer/: __init__.py  constants.py  explain_ast.py  explain_regex.py  explain_wrapper.py  explainable_result.py  tracer.py  typst_compile.py
tests/: test_ast_implementation.py  test_explainable.py  test_tokenize_implementation.py  test_trace_function.py  test_typst.py
