[tool.poetry]
name = "pysplainer"
version = "0.1.0"
description = ""
authors = ["filip-z <filip@zastavnik.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typst = "^0.10.0"
pytest = "^8.1.1"
pydantic = "^2.6.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
