[tool.poetry]
name = "pysplainer"
version = "0.2.0"
description = ""
authors = ["filip-z <filip@zastavnik.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
typst = ">=0.7.0"
numpy = ">=1.17.5"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
